<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rebet_demo</name>
  <version>1.0.0</version>
  <description>Demonstration of ReBeT</description>
  <maintainer email="EGAlberts@github.com">ega</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <!-- <depend>behaviortree_cpp</depend> -->
  <!-- <depend>behaviortree_ros2</depend> -->
  <depend>rebet_msgs</depend>
  <!-- <depend>darknet_ros_msgs</depend> -->
  <depend>geometry_msgs</depend>
  <!-- <depend>nav_msgs</depend> -->
  <depend>gazebo_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>ultralytics</depend>
  <!-- <depend>aal_msgs</depend> -->


  <!-- <depend>wavefront_frontier_msgs</depend> -->

 
  
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>
